# samples

./: BUILD.gn  gbinder_hello.py  hello_world.cc  mtk-img-extractor_bindata.rb  rpm_read_sign_bindata.rb  rpm_read_sign_rpm.py  skcanvas_text_test.cpp
atelier/gles_on_vanda_recreate/: Android.mk  hello.html  main.cpp
atelier/gles_on_vanda_restore/: Android.mk  main.cpp
atelier/hello_grapevine/: Android.mk  main.cpp
atelier/ng_shm/: Android.mk  fps.h  ng_shm_client.cpp  ng_shm_service.cpp
atelier/seppo/: Android.mk  client.cpp  server.cpp
atelier/vanda_compositor/: Android.mk  adler32.hpp  client.cpp  client_application.cpp  compositor.cpp  utils.hpp
backtrace/: Makefile  main.cpp
binder_dev_hello/: binder_dev_hello_client.cpp  binder_dev_hello_service.cpp
binder_dev_hello_android_8/: Android.mk  binder_dev_hello_client.cpp  utils.cpp  utils.h
binder_hello/: Android.mk  binder_hello.cpp
bios_vbe_fb_kernel/: Makefile  build.sh  fractal.c  grub.cfg  grub2.cfg  kernel.c  loader.s  pci.c
bios_vbe_fb_kernel/common/: bios.c  divdi3.c  moddi3.c  printf.c  qdivrem.c  s_floor.c  screen.c  setjmp.s  string.s  udivdi3.c  umoddi3.c  vbe.c
bios_vbe_fb_kernel/docker/: Dockerfile  build-docker.sh  run-docker.sh
bios_vbe_fb_kernel/include/: io.h  pci.h  setjmp.h  stdarg.h  string.h  types.h  vbe.h
bios_vbe_fb_kernel/x86emu/: x86emu.h  x86emu_regs.h  x86emu_util.c
chromium/: BUILD.gn  waitable_event.cc
chromium/ipc/56/: BUILD.gn  ipc_hello_world_client.cc  ipc_hello_world_client_and_server.cc  ipc_hello_world_server.cc  ipc_hello_world_single_process_io_thread.cc  my_channel_listener.h
chromium/mojo/: BUILD.gn  hello_mojo_single_process.56.cc  interface_registry_single_process.55.cc  mojo_channel_multi_process_master.56.cc
chromium/mojo/service_manager_dummy_runner_multi_process.55/: slave.cc
chromium/mojo/service_manager_dummy_runner_single_process.55/: main.cc
chromium/tls/: BUILD.gn  tls_hello.56.cc
chromium/v8-hello/: BUILD.gn  main.cpp
cond_variable_hello/: cond_variable_hello.cpp
drm_kms_fb_hello/: Makefile  main.c
fb_example/: Android.mk  fb_hello.c
fb_hello/: Android.mk  fb_hello.cpp
fb_native_window/: Android.mk  framebuffer_native_window.cpp  framebuffer_native_window.h  gralloc_stuff.cpp  gralloc_stuff.h  main.cpp  native_window_buffer.h
fb_power_display/: Android.mk  fb_power_display.c
fb_wait_for_vsync/: Android.mk  fb_wait_for_vsync.cpp
fbo_gles_cube/: Android.mk  fbo_cube.cpp  fbo_cube.gyp  fbo_gles_cube.kdev4  matrix.cpp  runtime.cpp  runtime.h  shaders.cpp  shaders.h  timer.cpp  timer.h
fbo_gles_cube/assets/: fbo_cube_cube.frag  fbo_cube_cube.vert
fbo_gles_cube_2/: Makefile  fbo_cube.cpp
gem_exec_nop/: Makefile  gem_exec_nop.cpp  notes.txt
gem_render_copy/: Makefile  gem_render_copy.cpp  intel.aub  notes.txt  out.ppm
gem_render_rect/: Makefile  gem_render_rect.cpp  out.ppm
gem_render_textured_rect/: Makefile  gem_render_textured_rect.cpp
gles_gbm_point/: Makefile  gles_gbm_point.cpp
gles_gbm_rect/: Makefile  gles_gbm_rect.cpp
gles_gbm_rot_cube/: Makefile  gles_gbm_rot_cube.cpp
gles_gbm_textured_rect/: Makefile  gles_gbm_textured_rect.cpp
gles_gbm_triangle/: Makefile  gles_gbm_tiangle.cpp
gles_surfaceless_triangle/: Makefile  gles_surfaceless_triangle.cpp
hello_world/: Android.mk  hello.cpp
hwc_native_window/: Android.mk  hwc_native_window.cpp  hwc_native_window.h  main.cpp  native_window_buffer.cpp
inotify/: Android.mk  main.cpp
ion_hello/: Android.mk  ion_hello_client.cpp  ion_hello_server.cpp
kos/bios_vbe_fb_kos/: Makefile  bios.c  build.mk  fractal.c  hello.edl  init.yaml  main.c  pci.c  security.cfg  vbe.c
kos/gem_render_copy_kos/: build.mk  main.c
kos/gem_render_rect_kos/: .gitignore  Makefile  main.c
kos/gem_render_textured_rect_kos/: .gdbinit  main.c
kos/usb_dwc3/src/: CMakeLists.txt  main.cpp
kos/usb_ehci/src/: CMakeLists.txt  main.cpp
libdrm_fb_hello/: Makefile  main.cpp
libdrm_kms_atomic_fb_hello/: Makefile  main.cpp
libusb_hello/: Makefile  kos-logcat.cpp
micro_composer/: Android.mk  binder_interfaces.h  hwc_native_window.cpp  hwc_native_window.h  micro_client.cpp  micro_composer.cpp  native_window_buffer.cpp  native_window_buffer.h  native_window_proxy.cpp  native_window_proxy.h  native_window_stub.cpp  native_window_stub.h  utils.cpp  utils.h
mojo/: BUILD.gn  hello_mojo_multi_process_master.cc  hello_mojo_multi_process_slave.cc  hello_mojo_single_process.cc  interface_registry_multi_process_master.cc  interface_registry_multi_process_slave.cc  mojo_channel_multi_process_master.55.cc  mojo_channel_multi_process_slave.55.cc  mojo_channel_single_process.55.cc
mojo/service_manager_dummy_runner_multi_process/: master.cc
mojo/service_manager_dummy_runner_multi_process.55/: BUILD.gn
mojo/service_manager_dummy_runner_single_process/: BUILD.gn
mojo/service_manager_dummy_runner_single_process.56/: BUILD.gn  main.cc
mojo/service_manager_hello_1/: BUILD.gn  main.cc
mojo/service_manager_hello_2/: BUILD.gn  main.cc  my_service_manifest.json  other_service.cc  other_service_manifest.json
mojo/service_manager_native_runner_multi_process/: master.cc
mojo/service_manager_native_runner_multi_process.55/: BUILD.gn  slave.cc  some_interface.mojom
mojo/service_manager_native_runner_single_process/: BUILD.gn  other_service.cc  other_service_manifest.json
mojo/service_manager_native_runner_single_process.55/: main.cc  other_service.cc
netlink-audit-listener/: Makefile  netlink-audit-listener.cpp
pthread_hello/: Android.mk  Makefile  pthread_hello.cpp
set_affinity/: Android.mk  power_test.cpp  set_affinity.cpp
sw_sync_hello/: Android.mk  sw_sync_hello.cpp
unix_sock_hello/: Android.mk  unix_sock_hello_client.cpp  unix_sock_hello_server.cpp
wayland-custom-proto/: Makefile  client.cpp  server.cpp  wcp.xml
wayland-egl-gbm/: Makefile  client.cpp  compositor.cpp
xray_hello/: Makefile  sample-trace.txt  unix-sock-client  unix-sock-server  unix_sock_hello_client.cpp  unix_sock_hello_server.cpp  xray-attr-list.txt  xray-sample  xray_sample.cpp
(+34 files in other folders)
