import("//services/shell/public/cpp/service.gni")
import("//services/shell/public/service_manifest.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("some_interface") {
  sources = [
    "some_interface.mojom",
  ]
}

executable("service-manager-native-runner-multi-process-master") {
  deps = [
    ":some_interface",
    "//base",
    "//mojo/edk/system",
    "//mojo/public/cpp/bindings",
    "//services/shell/public/cpp:cpp",
    "//services/shell/runner/host:lib",
    "//services/shell:shell",
  ]

  sources = [
    "master.cc",
  ]
}

executable("service-manager-native-runner-multi-process-slave") {
  deps = [
    ":some_interface",
    "//base",
    "//mojo/edk/system",
    "//mojo/public/cpp/bindings",
    "//services/shell/public/cpp:cpp",
    "//services/shell/runner/host:lib",
    "//services/shell:shell",
  ]

  sources = [
    "slave.cc",
  ]
}

group("service-manager-native-runner-multi-process") {
  deps = [
    ":service-manager-native-runner-multi-process-master",
    ":service-manager-native-runner-multi-process-slave"
  ]
}
