import("//services/shell/public/cpp/service.gni")
import("//services/shell/public/service_manifest.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("some_interface") {
  sources = [
    "some_interface.mojom",
  ]
}

service_manifest("other_service_manifest") {
  name = "other_service"
  source = "other_service_manifest.json"
}

service("other_service") {
  sources = [ "other_service.cc" ]

  deps = [
    ":some_interface",
    "//base",
    "//services/shell/public/cpp"
  ]

  data_deps = [
    ":other_service_manifest"
  ]
}

executable("service-manager-native-runner-single-process") {
  deps = [
    ":other_service",
    ":some_interface",
    "//base",
    "//mojo/edk/system",
    "//mojo/public/cpp/bindings",
    "//services/shell/public/cpp:cpp",
    "//services/shell/runner/host:lib",
    "//services/shell:shell",
  ]

  sources = [
    "main.cc",
  ]
}
